# pandora-across-client-example

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: 20260427T22061_weekend_03.seq.json  PAN-SCICAL-COM-20260527-VF-20260601-EX-20260608-R001_jpredits_cleaned00.xml
nb/: example.ipynb
pandora_across_client_example/: __init__.py  __main__.py  footprint_util.py  ingest.py  schedule_handler.py
